--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
-
+    <link href="~/adminRoot/css/select2-bootstrap4.min.css" rel="stylesheet" />
     <link href="~/vendor/select2/select2.min.css" rel="stylesheet" media="all">
     @*<link href="~/rcss/main.css" rel="stylesheet" media="all">*@
     <link href="~/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -822,10 +822,6 @@
     <script src="~/plugins/pdfmake/vfs_fonts.js"></script>
     <script src="~/adminRoot/js/sweetAlert.js"></script>
     <script src="~/adminRoot/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
-
-
-
-
 
     <script src="~/vendor/select2/select2.min.js"></script>
     @*<script src="~/rjs/global.js"></script>*@
